tests/baselines/reference/destructuringVoidStrictNullChecks.errors.txt
destructuringVoidStrictNullChecks.ts(2,7): error TS2532: Object is possibly 'undefined'.


==== destructuringVoidStrictNullChecks.ts (1 errors) ====
    declare const v: void;
    const {} = v;
          ~~
!!! error TS2532: Object is possibly 'undefined'.
    